k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mnodapp-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mnodapp-fe
  template:
    metadata:
      labels:
        app: mnodapp-fe
    spec:
      containers:
        - name: mnodapp-fe
          image: ${DOCKER_REPO}/mnodapp-fe-${ENV}:${DOCKER_TAG}
          resources:
            limits:
              cpu: "2"
              memory: "4Gi"
            requests:
              cpu: "500m"
              memory: "1Gi"
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
