k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mnodapp-fe-service
spec:
  selector:
    app: mnodapp-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
